--- a/CodeFirstBD/appsettings.json
+++ b/CodeFirstBD/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BarConeccion": "Server=MSI;database=BaseTienda;User ID=sa;Password=sa;TrustServerCertificate=true; MultipleActiveResultSets=True"
+    "BarConeccion": "Server=ANDRES;database=BaseTienda;User ID=sa;Password=sa;TrustServerCertificate=true; MultipleActiveResultSets=True"
   }
 }
